--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "typed.js": "^2.0.12"
   },
   "devDependencies": {
+    "axios": "^0.27.2",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "fs": "^0.0.1-security",
+    "got": "^12.4.1",
+    "needle": "^3.1.0"
   }
 }
